--- a/sample_board/SqlMap.config
+++ b/sample_board/SqlMap.config
@@ -12,7 +12,7 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <providers resource="providers.config"/>
   <database>
     <provider name="sqlServer2005"/>
-    <dataSource name="mssql" connectionString="Data Source=210.219.173.209;Initial Catalog=kd; User ID=kd;Password=kd*7^5"/>
+    <dataSource name="mssql" connectionString="Data Source=210.219.173.209;Initial Catalog=bmw; User ID=bmw_asp;Password=bmw_uber_@@"/>
   </database>
   
   <sqlMaps>
