--- a/sample_board/sample_board.csproj
+++ b/sample_board/sample_board.csproj
@@ -218,6 +218,9 @@
   <ItemGroup>
     <Content Include="Views\Board\view.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Board\modify.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
